--- a/assets/yi/lang/zh_cn.json
+++ b/assets/yi/lang/zh_cn.json
@@ -1,5 +1,6 @@
 {
 	"item.yi.technological_core": "§e科技核心",
+	"item.yi.sacred_and_demonic_mirror": "§ds圣魔宝镜",
 	"tooltip.sons_of_sins.touch_of_greed": "§5§o使敌人穿过地面",
 	"tooltip.sons_of_sins.cursed_head": "§5§o卸下敌人的护甲片",
 	"tooltip.sons_of_sins.ether_engine": "§5§o能够腐蚀最纯洁的灵魂",
@@ -21,10 +22,22 @@
 	"tooltip.sons_of_sins.shape_shifting_tool": "§5§o能够适应并破坏每一个方块",
 	"tooltip.sons_of_sins.flesh_*": "§5§o具有自我再生的能力",
 	"tooltip.sons_of_sins.sinful_*": "§5§o一把来自墓地之外的坚不可摧的工具",
-	"enchantment.yi.infinity.desc": "让你的食物可以无限吃",
 	"enchantment.yi.infinity": "§6无限",
+	"enchantment.yi.infinity.desc": "让你的食物可以无限吃",
 	"enchantment.yi.evil_life_drain": "§c生命收割",
-	"enchantment.yi.evil_life_drain.desc": "§4邪恶-当攻击时在扣除玩家1点血造成增加10%的伤害，若击杀生物则回复造成伤害10%的生命值",
+	"enchantment.yi.evil_life_drain.desc": "§4邪恶-攻击消耗生命力进行额外的加成，击杀目标回复生命力",
+	"enchantment.yi.evil_demonic_corruption": "§c恶魔腐化",
+	"enchantment.yi.evil_demonic_corruption.desc": "§4邪恶-你与恶魔的亲和变得更强",
+	"enchantment.yi.holy_angel_protection": "§e天使庇佑",
+	"enchantment.yi.holy_angel_protection.desc": "§6圣洁-获得额外的伤害减免",
+	"enchantment.yi.fallen_angel_blessing": "§d堕天使的赐福",
+	"enchantment.yi.fallen_angel_blessing.desc": "§7混沌-使你可以完美的运用§6天使§7与§4恶魔§7之力",
+	"enchantment.yi.avada_kedavra": "§d勿忘汝终有一死",
+	"enchantment.yi.avada_kedavra.desc": "§7混沌-有极低概率造成即死",
+	"death.attack.holy": "%1$s沐浴在圣光之下",
+	"attribute.name.holy_damage": "圣洁伤害",
+	"attribute.name.evil_damage": "邪恶伤害",
+	"death.attack.evil": "%1$s被邪恶吞噬了",
 	"tetra.material.random": "海晶",
 	"tetra.material.random.prefix": "海晶",
 	"tetra.material.index": "幻想乡",
