--- a/assets/yi/lang/zh_cn.json
+++ b/assets/yi/lang/zh_cn.json
@@ -41,6 +41,7 @@
 	"attribute.name.evil_protection": "邪恶抗性",
 	"death.attack.evil": "%1$s被邪恶吞噬了",
 	"quality.evil.name": "邪恶",
+	"tooltip.owner": "拥有者 :",
 	"tetra.material.random": "海晶",
 	"tetra.material.random.prefix": "海晶",
 	"tetra.material.index": "幻想乡",
