--- a/assets/yi/lang/zh_cn.json
+++ b/assets/yi/lang/zh_cn.json
@@ -58,5 +58,7 @@
 	"yi.effect.mana_drain.name": "魔力汲取",
 	"yi.effect.mana_drain.tooltip": "攻击回复造成伤害的§e%s%%§rmana",
 	"yi.effect.energy_drain.name": "雷能涌动",
-	"yi.effect.energy_drain.tooltip": "攻击回复造成§e雷电§r伤害的§e%s00%%§rFE"
+	"yi.effect.energy_drain.tooltip": "攻击回复造成§e雷电§r伤害的§e%s00%%§rFE",
+	"profession.1.name":"剑士",
+	"profession.2.name":"游侠"
 }
